fix bug third-part-modules css

--- a/src/app/shared/components/clipboard/clipboard-button/clipboard-button.component.html
+++ b/src/app/shared/components/clipboard/clipboard-button/clipboard-button.component.html
@@ -1,3 +1,5 @@
-<button (click)="copyText(text)" class="{{ buttonClass }}">
-    <i data-feather="copy"></i>
+<button (click)="copyText(text)" [class]="buttonClass">
+  <i data-feather="copy"></i>
 </button>
+
+<toastr-css></toastr-css>
