--- a/src/app/modules/contests/pages/contests/contests.component.html
+++ b/src/app/modules/contests/pages/contests/contests.component.html
@@ -3,7 +3,7 @@
     <div class="col-12 contests-page-top">
       <div class="text-center mt-1">
         <div [@fadeInUpOnEnter] ngbTooltip="{{ 'Rating' | translate }}"
-          class="avatar ml-1 avatar-lg bg-primary p-50 m-0 mb-1">
+          class="avatar ml-1 avatar-lg badge-glow bg-primary p-50 m-0 mb-1">
           <a routerLink="rating" class="text-white">
             <div class="avatar-content">
               <i [data-feather]="'rating' | iconName" class="font-large-1"></i>
@@ -11,7 +11,7 @@
           </a>
         </div>
         <div [@fadeInUpOnEnter] ngbTooltip="{{ 'Profile' | translate }}"
-          class="avatar ml-1 avatar-lg bg-primary p-50 m-0 mb-1">
+          class="avatar ml-1 avatar-lg badge-glow bg-primary p-50 m-0 mb-1">
           <a routerLink="profile" class="text-white">
             <div class="avatar-content">
               <i [data-feather]="'user'" class="font-large-1"></i>
@@ -19,7 +19,7 @@
           </a>
         </div>
         <div [@fadeInUpOnEnter] ngbTooltip="{{ 'MyContests' | translate }}"
-          class="avatar ml-1 avatar-lg bg-primary p-50 m-0 mb-1">
+          class="avatar ml-1 avatar-lg badge-glow bg-primary p-50 m-0 mb-1">
           <a routerLink="user-contests" class="text-white">
             <div class="avatar-content">
               <i [data-feather]="'flag'" class="font-large-1"></i>
