change css contest card small

--- a/src/app/modules/contests/elements/contest-card/contest-card-small/contest-card-small.component.html
+++ b/src/app/modules/contests/elements/contest-card/contest-card-small/contest-card-small.component.html
@@ -1,11 +1,11 @@
-<div rippleEffect class="card" [ngClass]="{'bg-contest': coreConfig.layout.skin != 'dark'}">
+<div class="card bg-contest">
   <a [routerLink]="routerLink">
     <div class="card-header">
       <h5 class="card-title text-white">{{ contest.title }}</h5>
       <span class="date text-white">
-        {{ contest.startTime | localizedDate:'EEEE, MMM d | HH:mm' }} -
+        {{ contest.startTime | localizedDate:'EEEE, MMM d | HH:mm' }}
         <span *ngIf="contest.finishTime.getDate() == contest.startTime.getDate()">
-          {{ contest.finishTime | date:'HH:mm' }}
+          - {{ contest.finishTime | date:'HH:mm' }}
         </span>
       </span>
     </div>
