--- a/src/app/modules/home/statistics-section/statistics-section.component.scss
+++ b/src/app/modules/home/statistics-section/statistics-section.component.scss
@@ -18,6 +18,14 @@
     height: auto;
     stroke: #f8f8f8;
   }
+
+  @include media-breakpoint-down(lg) {
+    width: calc(100% + 1.2rem);
+  }  
+
+  @include media-breakpoint-down(sm) {
+    height: 160px;
+  }
 }
 
 .statistics {
@@ -53,12 +61,6 @@
       font-size: 1rem;
       letter-spacing: 0.25px;
     }
-  }
-}
-
-@include media-breakpoint-down(lg) {
-  footer {
-    width: calc(100% + 1.2rem);
   }
 }
 
