kepcoin page | redesign streak freeze card

--- a/src/app/modules/kepcoin/kepcoin.component.html
+++ b/src/app/modules/kepcoin/kepcoin.component.html
@@ -16,7 +16,7 @@
           <strong>
             {{ streak }}
           </strong>
-          <span class="badge mr-50 ml-50 badge-light-success">{{ 'YouHave' | translate }} <strong>{{ streakFreeze }}</strong></span>
+          <span class="badge mr-50 ml-50 badge-warning badge-glow">{{ 'YouHave' | translate }} <strong>{{ streakFreeze }}</strong></span>
           <kepcoin-spend-swal
             [value]="25"
             [purchaseUrl]="'purchase-streak-freeze'"
