--- a/src/app/modules/problems/elements/problem-body/problem-body.component.html
+++ b/src/app/modules/problems/elements/problem-body/problem-body.component.html
@@ -63,16 +63,16 @@
         <thead>
           <tr class="bg-gradient-primary">
             <th>
-              <div class="row justify-content-between">
-                <div class="pl-1">
+              <div class="row justify-content-between align-items-center">
+                <div class="pl-1 font-small-4">
                   {{ 'INPUT' | translate }}
                 </div>
                 <clipboard-button [text]="sampleTest.input"></clipboard-button>
               </div>
             </th>
             <th>
-              <div class="row justify-content-between">
-                <div class="pl-1">
+              <div class="row justify-content-between align-items-center">
+                <div class="pl-1 font-small-4">
                   {{ 'OUTPUT' | translate }}
                 </div>
                 <clipboard-button [text]="sampleTest.output"></clipboard-button>
