refactoring some styles

--- a/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.html
+++ b/src/app/modules/contests/pages/contest/contest-attempts/contest-attempts.component.html
@@ -58,7 +58,7 @@
             <div class="layout-spacing">
               <div class="card">
                 <div class="card-header">
-                  <h5 class="card-title text-center">
+                  <h5 class="card-title text-center mt-1">
                     {{ 'CONTESTS.FILTER_ATTEMPTS' | translate }}
                     <hr>
                   </h5>
