--- a/src/app/modules/contests/elements/contest-card/contest-card-big/contest-card-big.component.scss
+++ b/src/app/modules/contests/elements/contest-card/contest-card-big/contest-card-big.component.scss
@@ -4,7 +4,7 @@
 
 .card {
   background: var(--bg-gradient);
-  box-shadow: var(--box-shadow);
+  box-shadow: var(--box-shadow) !important;
   border: none;
   opacity: 1;
 
@@ -127,7 +127,7 @@
   &[class*="One"][class*="Line"] {
     --bg: #d54f56;
     --box-shadow: 0 0 5px #d54f56;
-    --bg-gradient: linear-gradient(-45deg, #b2010acc, 50%, rgba(204, 1, 11, 0.644));
+    --bg-gradient: linear-gradient(-45deg, #b2010ac4, 50%, rgba(190, 18, 27, 0.719));
   }
 
   &[class*="SQL"]{
@@ -142,17 +142,21 @@
     --bg-gradient: linear-gradient(-45deg, #0c4c90c8, #0c4c90c2);
   }
 
-  &.contest-253 {    
+  &.contest-253 {
     --bg-gradient: linear-gradient(141deg, #00ced5c5, 50%, #02abaf);
     --bg: #36b3e9;
     --box-shadow: 0px 0px 5px #36b3e9;
   }
 
-  &.contest-type-LessCode {    
+  &.contest-type-LessCode {
     --bg-gradient: linear-gradient(141deg, #dee7e9b9, 50%, rgba(222, 231, 233, 0.74)e9);
     --bg: #b0b5b6c4;
     --box-shadow: 0px 0px 5px #b0b5b6c4;
     --text-color: #000;
+  }
+
+  &.contest-297 {
+    --text-color: #fff;
   }
   
   &[class*="Uzinfocom"]{
