--- a/src/app/modules/problems/pages/problems/sections/section-topics/section-topics.component.scss
+++ b/src/app/modules/problems/pages/problems/sections/section-topics/section-topics.component.scss
@@ -58,33 +58,27 @@
 }
 
 .topic-all {
-  background-image: linear-gradient(to right, #4e54c8, #646ae2);
-  
-  img {
-    margin-top: 10px !important;
-    margin-bottom: 10px !important;
-    height: 60px !important;
-  }
-}
-
-.topic-bash {
-  background-image: linear-gradient(47deg, #787883, #ebebeb);
-}
-
-.topic-coding {
-  background-image: linear-gradient(147deg, #70cfff, 60%, #aba2ff);
-}
-
-.topic-python-tricks {
-  background-image: linear-gradient(47deg, #b97bff, #8397f3);
+  background: #6687cc;
 }
 
 .topic-best {
-  background-image: linear-gradient(to right, #dc66e5, #e469ea);
+  background-image: linear-gradient(4deg, #804b8b, #3f35c7);
+}
+
+.topic-coding {
+  background: #49a770;;
+}
+
+.topic-bash {
+  background: #b5b5b9;
+}
+
+.topic-python-tricks {
+  background-image: linear-gradient(47deg, #3cccdd, #6b85f7);
 }
 
 .topic-database {
-  background-image: linear-gradient(47deg, #76b4fa, #9d74df);
+  background: #8db0bd;
 }
 
 .topic-math {
@@ -94,27 +88,27 @@
 
 ::ng-deep .dark-layout {
   .topic-all {
-    background-image: linear-gradient(to right, #223f79, #4b6cb7);
+    background-image: linear-gradient(to right, #15284e, #2d4372);
   }
 
   .topic-bash {
-    background-image: linear-gradient(47deg, #3d3d43, #a4a4a4);
+    background: #7a7a7a;;
   }
   
   .topic-coding {
-    background-image: linear-gradient(47deg, #33aae6, #6b60cd);
+    background-image: linear-gradient(6deg, #26814c, #2b7c51);
   }
   
   .topic-python-tricks {
-    background-image: linear-gradient(47deg, #9538ff, #6b85f7);
+    background-image: linear-gradient(47deg, #1f8895, #5068d3);
   }
   
   .topic-best {
-    background-image: linear-gradient(47deg, #e240f4, #4f42ff);
+    background-image: linear-gradient(4deg, #4c2454, #1f1881);
   }
   
   .topic-database {
-    background-image: linear-gradient(47deg, #41aaff, #7a4bc6);
+    background: #4f6d78;
   }
   
   .topic-math {
