change attempts table on duels

--- a/src/app/modules/duels/duel/duel.component.html
+++ b/src/app/modules/duels/duel/duel.component.html
@@ -146,7 +146,7 @@
           </div>
         </div>
         <div class="card-body">
-          <attempts-table [duel]="duel" [attempts]="attempts"></attempts-table>
+          <attempts-table [hideSourceCodeSize]="true" [attempts]="attempts" [contest]="duel"></attempts-table>
         </div>
       </div>
     </div>
