duel card pointer fix

--- a/src/app/modules/tournaments/tournament/tournament-duels/duel-card/duel-card.component.html
+++ b/src/app/modules/tournaments/tournament/tournament-duels/duel-card/duel-card.component.html
@@ -1,4 +1,4 @@
-<div class="duel-card card">
+<a [routerLink]="['/practice', 'duels', 'duel', duel.id]" class="duel-card card">
   <div class="table-responsive">
     <table class="table">
       <tbody>
@@ -26,4 +26,4 @@
       </tbody>
     </table>
   </div>
-</div>
+</a>
