tiny changes on home page

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -18,7 +18,7 @@
             'col-lg-4 col-md-12 col-sm-12 order-1': !isMenuToggled || isMenuCollapsed,
             'col-lg-6 col-md-12 col-sm-12 order-2': isMenuToggled && !isMenuCollapsed
           }">
-        <div class="card card-congratulation-medal">
+        <div class="card card-congratulation-medal" style="min-height: 235px;">
           <div class="card-body">
             <h4><strong>{{ 'TopRating' | translate }}</strong></h4>
 
