--- a/src/app/modules/tournaments/tournament/tournament-duels/tournament-duels.component.html
+++ b/src/app/modules/tournaments/tournament/tournament-duels/tournament-duels.component.html
@@ -7,7 +7,7 @@
   
     <div class="row">
       <div class="col-lg-6 col-md-6 col-12" *ngFor="let stageDuel of stage.duels">
-        <duel-card *ngIf="stageDuel.duel" [routerLink]="['/practice', 'duels', 'duel', stageDuel.duel.id]" [duel]="stageDuel.duel"></duel-card>
+        <duel-card *ngIf="stageDuel.duel" [duel]="stageDuel.duel"></duel-card>
       </div>
     </div>
   </div>
