refactoring user skills | rename django to webdevelopment and algo to algorithms

--- a/src/app/modules/users/user-profile/user-profile.component.html
+++ b/src/app/modules/users/user-profile/user-profile.component.html
@@ -245,19 +245,19 @@
                   <ngb-progressbar type="primary" [value]="userSkills.python" [showValue]="true"></ngb-progressbar>
                 </div>
                 <div class="progress-wrapper mt-2">
-                  <div class="mb-25">Django</div>
-                  <ngb-progressbar type="primary" [value]="userSkills.django" [showValue]="true"></ngb-progressbar>
+                  <div class="mb-25">{{ 'WebDevelopment' | translate }}</div>
+                  <ngb-progressbar type="primary" [value]="userSkills.webDevelopment" [showValue]="true"></ngb-progressbar>
                 </div>
                 <div class="progress-wrapper mt-2">
-                  <div class="mb-25">Web-scraping</div>
+                  <div class="mb-25">{{ 'WebScraping' | translate }}</div>
                   <ngb-progressbar type="primary" [value]="userSkills.webScraping" [showValue]="true"></ngb-progressbar>
                 </div>
                 <div class="progress-wrapper mt-2">
-                  <div class="mb-25">Algo</div>
-                  <ngb-progressbar type="primary" [value]="userSkills.algo" [showValue]="true"></ngb-progressbar>
+                  <div class="mb-25">{{ 'Algorithms' | translate }}</div>
+                  <ngb-progressbar type="primary" [value]="userSkills.algorithms" [showValue]="true"></ngb-progressbar>
                 </div>
                 <div class="progress-wrapper mt-2">
-                  <div class="mb-25">Data Science</div>
+                  <div class="mb-25">{{ 'DataScience' | translate }}</div>
                   <ngb-progressbar type="primary" [value]="userSkills.dataScience" [showValue]="true"></ngb-progressbar>
                 </div>
               </div>
