--- a/src/app/modules/account-settings/skills/skills.component.html
+++ b/src/app/modules/account-settings/skills/skills.component.html
@@ -23,14 +23,14 @@
       </div>
       <div class="col-lg-8 col-12 mx-auto">
         <div class="form-group">
-          <label><h5>Django</h5></label>
+          <label><h5>Web development</h5></label>
           <nouislider
             [connect]="true"
             [behaviour]="'drag'"
             [tooltips]="true" [min]="0"
             [max]="100"
             [step]="1"
-            [(ngModel)]="userSkills.django"
+            [(ngModel)]="userSkills.webDevelopment"
             [ngModelOptions]="{standalone: true}">
           </nouislider>
         </div>
@@ -51,14 +51,14 @@
       </div>
       <div class="col-lg-8 col-12 mx-auto">
         <div class="form-group">
-          <label><h5>Algo</h5></label>
+          <label><h5>Algorithms</h5></label>
           <nouislider
             [connect]="true"
             [behaviour]="'drag'"
             [tooltips]="true" [min]="0"
             [max]="100"
             [step]="1"
-            [(ngModel)]="userSkills.algo"
+            [(ngModel)]="userSkills.algorithms"
             [ngModelOptions]="{standalone: true}">
           </nouislider>
         </div>
